crates/sgf-core/tests/snapshots/fe_zones/zones.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Set the fallen empire zone of 3 systems
inverse: Batch { description: "Set the fallen empire zone of 3 systems", ops: [SetFeZone { system: 12, zone: Some(FeZone { direction: Se, kind: Materialist, distance: 60, preferred: true, fallback: true }) }, SetFeZone { system: 11, zone: None }, SetFeZone { system: 9, zone: Some(FeZone { direction: N, kind: Random, distance: 40, preferred: true, fallback: false }) }] }

--- scenario
+++ scenario
@@ -40,10 +40,10 @@
 	system = { id = "6" position = { x = -40 y = 80 } initializer = painted_galaxy_rl_basic effect = { set_star_flag = painted_galaxy_automatic_initializer } }
 	system = { id = "7" position = { x = 20 y = -20 } name = "Ingress" effect = { set_star_flag = painted_galaxy_wormhole_1 set_star_flag = empire_cluster } }
 	system = { id = "8" position = { x = -160 y = -160 } name = "Egress" effect = { set_star_flag = painted_galaxy_wormhole_1 set_star_flag = empire_cluster } }
-	system = { id = "9" position = { x = 0 y = -180 } name = "Old Seat" effect = { set_star_flag = painted_galaxy_fe_spawn set_star_flag = painted_galaxy_fe_spawn_n set_star_flag = painted_galaxy_fe_spawn_random set_star_flag = painted_galaxy_fe_spawn_distance_40 set_star_flag = painted_galaxy_fe_spawn_preferred } }
+	system = { id = "9" position = { x = 0 y = -180 } name = "Old Seat" }
 	system = { id = "10" position = { x = 150 y = -30 } name = "Void" }
-	system = { id = "11" position = { x = -150 y = -30 } }
-	system = { id = "12" position = { x = 120 y = 150 } name = "High Seat" initializer = painted_galaxy_rl_basic effect = { set_star_flag = painted_galaxy_automatic_initializer set_star_flag = painted_galaxy_wormhole_2 set_star_flag = empire_cluster set_star_flag = painted_galaxy_fe_spawn set_star_flag = painted_galaxy_fe_spawn_se set_star_flag = painted_galaxy_fe_spawn_materialist set_star_flag = painted_galaxy_fe_spawn_distance_60 set_star_flag = painted_galaxy_fe_spawn_preferred set_star_flag = painted_galaxy_fe_spawn_fallback } }
+	system = { id = "11" position = { x = -150 y = -30 } effect = { set_star_flag = painted_galaxy_fe_spawn set_star_flag = painted_galaxy_fe_spawn_nw set_star_flag = painted_galaxy_fe_spawn_spiritualist set_star_flag = painted_galaxy_fe_spawn_distance_160 set_star_flag = painted_galaxy_fe_spawn_preferred } }
+	system = { id = "12" position = { x = 120 y = 150 } name = "High Seat" initializer = painted_galaxy_rl_basic effect = { set_star_flag = painted_galaxy_automatic_initializer set_star_flag = painted_galaxy_wormhole_2 set_star_flag = empire_cluster set_star_flag = painted_galaxy_fe_spawn set_star_flag = painted_galaxy_fe_spawn_ne set_star_flag = painted_galaxy_fe_spawn_xenophobe set_star_flag = painted_galaxy_fe_spawn_distance_200 } }
 	system = { id = "13" position = { x = -120 y = 150 } name = "Low Seat" effect = { set_star_flag = painted_galaxy_wormhole_2 set_star_flag = empire_cluster } }
 	add_hyperlane = { from = "0" to = "5" }
 	add_hyperlane = { from = "0" to = "6" }
